# nubo-hs

./: .gitignore  LICENSE  README.md
Client/: .ghci  nubo.cabal  stack.yaml
Client/app/: Main.hs
Client/src/: Archive.hs  CmdAuth.hs  CmdHelp.hs  CmdIgnore.hs  CmdInit.hs  CmdList.hs  CmdRemote.hs  CmdSync.hs  Config.hs  Database.hs  Environment.hs  Error.hs  FileHelper.hs  Matching.hs  Misc.hs  MsgPack.hs  PrettyPrint.hs  UUID.hs  WebService.hs
Client/src/Archive/: Internal.hs
Client/src/CmdSync/: Actions.hs  Logic.hs
Client/src/Error/: Internal.hs
Client/src/Matching/: Internal.hs
Client/src/PrettyPrint/: Internal.hs
Client/src/UUID/: Internal.hs
Client/test/: ArchiveSpec.hs  CmdSyncSpec.hs  EnvironmentSpec.hs  MatchingSpec.hs  MsgPackSpec.hs  Spec.hs  UUIDSpec.hs
Prod/: build-linux.sh  build-macos.sh  build-server.php  install.php  nubo.deb  nubo.php  nubo.pkg  nubo.wxs  pack-linux.sh  pack-macos.sh  pack-server.sh  pack-windows.bat  pack-windows.ps1  patchversion.sh  template.php
Sandbox/: readme.txt
Server/: actions.js  actions.php  index.php  style.css  sync.php
Server/php/: api.php  exception.php  helpers.php  msgpack.php  sqlite.php  version.php
