name:                nubo
version:             2.0.0.4
-- synopsis:
-- description:
homepage:            https://github.com/PascalLG/Nubo
license:             MIT
author:              Pascal Levy
maintainer:          pascal.levy@aequans.com
copyright:           2017 Æquans
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Config
                     , Misc
                     , PrettyPrint
                     , PrettyPrint.Internal
                     , Error
                     , UUID
                     , UUID.Internal
                     , Database
                     , Archive
                     , Environment
                     , FileHelper
                     , MsgPack
                     , Matching
                     , Matching.Internal
                     , WebService
                     , CmdAuth
                     , CmdHelp
                     , CmdIgnore
                     , CmdInit
                     , CmdRemote
                     , CmdSync
                     , CmdSync.Actions
                     , CmdSync.Logic
                     , Paths_nubo
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , directory >= 1.3
                     , filepath
                     , binary >= 0.9
                     , containers
                     , cryptonite
                     , HDBC
                     , HDBC-sqlite3
                     , hostname
                     , http-client
                     , http-client-tls
                     , http-types
                     , zlib >= 0.6.1.2
                     , memory
                     , mtl
                     , transformers
                     , text
                     , time
                     , unicode-transforms
  if os(windows)
      build-depends:   Win32
  if !os(windows)
      build-depends:   unix
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

executable nubo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , nubo
                     , mtl
  default-language:    Haskell2010

test-suite nubo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , binary
                     , bytestring
                     , hspec
                     , nubo
                     , random
                     , text
  other-modules:       UUIDSpec
                     , MsgPackSpec
                     , MatchingSpec
                     , CmdSyncSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/PascalLG/Nubo
